--- a/TMA01_Preparation/TMA01 Preparation.ipynb
+++ b/TMA01_Preparation/TMA01 Preparation.ipynb
@@ -9,12 +9,13 @@
     ]
    },
    "source": [
+    "\n",
     "<h1 style =\"color:blue;\">TM351 24J</h1>\n",
     "<h2 style=\"color:blue;\">Data management  and analysis</h2>\n",
     "<h2 style=\"color:blue;\">TMA01 Preparation Tutorial</h2>\n",
     "\n",
-    "### Mary Garvey\n",
-    "### 4th November 2024"
+    "<h3>Mary Garvey</h3>\n",
+    "<h3>4th November 2024</h3>"
    ]
   },
   {
@@ -27,10 +28,7 @@
     "# This cell imports the standard pandas library needed for this workbook\n",
     "\n",
     "import pandas as pd\n",
-    "import json\n",
-    "\n",
-    "from IPython.display import display, HTML\n",
-    "display(HTML('<style> td, th{text-align: left;}</style>'))"
+    "import json"
    ]
   },
   {
@@ -98,7 +96,7 @@
     "\n",
     "* Reproducibility and provenance\n",
     "\n",
-    "Researchers want to be able to reproduce and prove their results. For example, in a research paper you can't just say the answer is 42 without showing they came to that result.\n",
+    "Researchers want to be able to reproduce and prove their results. For example, a research paper can't just say the answer is 42 without showing how the result came about.\n",
     "\n",
     "From your point of view, notebooks allow you to document and provide reproducible data processes, so others can see your reasoning and allow them to re-run your entire analysis and may be carry out further analsysis. \n",
     "\n",
@@ -240,8 +238,6 @@
     ]
    },
    "source": [
-    "This one seems to be text:\n",
-    "\n",
     "Structured, semi-structured or unstructured?"
    ]
   },
@@ -518,7 +514,7 @@
    "id": "4de89f3f-9640-4011-8fa7-6792aaa6e953",
    "metadata": {},
    "source": [
-    "After character encoding, the next consideration is classifying data so that it can be analysed. Part 2 introduces a scheme produced by Stanley Smith Stevens, the NOIR measurement scale.\n",
+    "After character encoding, the next consideration is classifying data so that it can be analysed. Part 2 introduces a scheme produced by Stanley Smith Stevens (Stevens, 1946), the NOIR measurement scale.\n",
     "\n",
     "It is important to understand the classification and associated measurement scale so that you know what mathematical operations can legitimately be applied to the data found.\n",
     "\n",
@@ -538,9 +534,9 @@
    "id": "d58f870b-e8c0-4219-9fd0-809f039bdfe4",
    "metadata": {},
    "source": [
-    "Nominal and Ordinal values are discrete. That is, they are distinct and separate, usually whole numbers, such as representing the number of students taking TM351.\n",
+    "Nominal and Ordinal values are discrete. They are distinct and separate, such as whole numbers representing the number of students taking TM351.\n",
     "\n",
-    "Interval and ratio values are continuous. That is, they can be measured with precision and have an infinite number of values between two points, such as weight or temperature."
+    "Interval and ratio values are continuous. They can be measured with precision and have an infinite number of values between two points, such as weight or temperature."
    ]
   },
   {
@@ -653,7 +649,7 @@
     "\n",
     "Don't forget to document what has been added/deleted/changed.\n",
     "\n",
-    "See: Activity 3.2 Exploratory in Part 3, which reviews the following paper, which is available from the OU Library:\n",
+    "See: Activity 3.2 Exploratory in Part 3, which reviews the following paper and is available from the OU Library:\n",
     "\n",
     "Kim, W., Choi, B. J., Hong, E. K., Kim, S. K. and Lee, D. (2003) ‘A taxonomy of dirty data’, Data Mining and Knowledge Discovery, vol. 7, no. 1, pp. 81–99.\n"
    ]
@@ -791,7 +787,7 @@
     "\n",
     "See Exercise 5.6 Exploratory in Section 5.2 The report, which provides a sample layout for a report in the Discussion: `TM351_Report_Outline.docx` \n",
     "\n",
-    "If time permits, we can look at a sample Notebook using Boys Names: `Tutorial 2 BoyNames.ipynb`\n"
+    "If time permits, we can look at a sample Notebook that works through the data pipeline using Boys Names: `Tutorial 2 BoyNames.ipynb` and there is an equivalent notebook for Girls names: `Tutorial 2 GirlNames.ipynb`\n"
    ]
   },
   {
@@ -1109,7 +1105,7 @@
     "- Tutor\n",
     "- Module team\n",
     "\n",
-    "**Don’t forget the next iCMA is due on 21st November at 23:59!**\n"
+    "**Do not forget the next iCMA is due on 21st November at 23:59!**\n"
    ]
   },
   {
@@ -1133,23 +1129,32 @@
     "\n",
     "Kitchin, R. (2014) The data revolution: Big data, open data, data infrastructures and their consequences, Sage.\n",
     "\n",
+    "Stevens, S. S. (1946) ‘On the Theory of Scales of Measurement’, Science, vol. 103, no. 2684, pp. 677–80 [Online]. DOI: 10.1126/science.103.2684.677\n",
     "\n",
-    "### Data sets\n",
-    "\n",
-    "* SFR01_2016_UD_metadata.txt\n",
-    "* SFR01_2016_UD_metadata.csv\n",
-    "\n",
-    "TM351-2020J TMA02 provided key stage 4 data, which was originally downloaded from:\n",
-    "\n",
-    "https://www.gov.uk/government/statistics/revised-gcse-and-equivalent-results-in-england-2014-to-2015\n",
+    "### Data sets and Licences\n",
     "\n",
     "* role.json\n",
     " \n",
     "A lot of publicly available data is in JSON format. This notebook has used USA government politician datasets - US Senators (before the forthcoming 2024 elections!) found here: https://www.govtrack.us/api/v2/role?current=true&role_type=senator.\n",
     "\n",
+    "There is no obvious licence given, the Privacy Policy mentions: *GovTrack is offered to as a free public service to users (“You”, “Your”) in the United States by Civic Impulse, LLC (“We”, “Us”, “Our”)* (https://www.govtrack.us/legal)\n",
+    "\n",
+    "The rest of the datasets are from previous TM351 TMAs:\n",
+    "\n",
+    "* SFR01_2016_UD_metadata.txt\n",
+    "* SFR01_2016_UD_metadata.csv\n",
+    "\n",
+    "Used in 2020J TMA02 - Key Stage 4 data, which was originally downloaded from:\n",
+    "https://www.gov.uk/government/statistics/revised-gcse-and-equivalent-results-in-england-2014-to-2015\n",
+    "\n",
+    "Licence: OGL All content is available under the Open Government Licence v3.0, except where otherwise stated (https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/)\n",
+    "\n",
     "* 85043238.csv - Used in 2020J TMA02\n",
+    "\n",
     "UK Census data Report DC6206EW - NS-SeC by ethnic group by sex by age (2011 data). \n",
     "Available at https://www.nomisweb.co.uk/query/construct/summary.asp?mode=construct&version=0&dataset=682 (Produced by OU: 31 August 2020).\n",
+    "\n",
+    "Nomis is a service provided by Office for National Statistics (ONS), which provides data under the OGL licence v3.0\n",
     "\n",
     "* stats1718.csv - Used in 2021J TMA01\n",
     "\n",
@@ -1157,7 +1162,9 @@
     "Cuntz, Alexander, 2020, \"Replication Data for: Grand rights and opera reuse today\", https://doi.org/10.7910/DVN/8LUFN8, Harvard Dataverse, V1\n",
     "\n",
     "It is stored as a csv file called stats1718.csv in the data directory. This dataset was obtained from the Harvard dataverse portal on 13th March, 2021 from:\n",
-    "https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/8LUFN8\n"
+    "https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/8LUFN8\n",
+    "\n",
+    "Licence: Public Domain CC0 1.0 0 (https://creativecommons.org/publicdomain/zero/1.0/)"
    ]
   },
   {
@@ -1190,6 +1197,8 @@
    "metadata": {},
    "source": [
     "## Reading CSV files\n",
+    "\n",
+    "First example.\n",
     "\n",
     "The problem is that meta-data can be found at the start and end of the file. \n",
     "\n",
