--- a/SQL Examples/TM351_SQL_Tutorial-24J.ipynb
+++ b/SQL Examples/TM351_SQL_Tutorial-24J.ipynb
@@ -563,6 +563,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sql\n",
+    "/*  \n",
+    "    Note if we want both columns in descending order, you need to use DESC twice, otherwise it will default to ascending\n",
+    "*/\n",
+    "SELECT * FROM cellphone_ratings\n",
+    "ORDER by user_id desc\n",
+    "LIMIT 10;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -851,7 +866,7 @@
     "%%sql\n",
     "/* restrict columns */\n",
     "\n",
-    "SELECT cellphone_id, brand, model FROM cellphone_data;"
+    "SELECT model, cellphone_id, brand  FROM cellphone_data;"
    ]
   },
   {
@@ -1466,7 +1481,7 @@
    "source": [
     "**Query 9**\n",
     "<pre>\n",
-    "SELECT model, AVG(price) FROM cellphone_data GROUP BY operating_system;/pre>\n"
+    "SELECT model, AVG(price) FROM cellphone_data GROUP BY operating_system;</pre>\n"
    ]
   },
   {
@@ -2024,7 +2039,7 @@
    "source": [
     "### Final queries\n",
     "\n",
-    "These queries are based on a simple DEPT and EMP scenario (1 department can employ many employees, each employee works for one department):"
+    "These queries are based on a simple DEPT and EMP scenario (where 1 department can employ many employees, each employee may work for one department):"
    ]
   },
   {
